# AgentConnect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  example.env  pyproject.toml  requirements.txt
agentconnect/: __init__.py  cli.py
agentconnect/agents/: README.md  __init__.py  ai_agent.py  human_agent.py
agentconnect/agents/telegram/: README.md  __init__.py  bot_manager.py  keyboards.py  message_processor.py  states.py  telegram_agent.py  telegram_tools.py
agentconnect/communication/: README.md  __init__.py  hub.py
agentconnect/communication/protocols/: __init__.py  agent.py  base.py  collaboration.py
agentconnect/core/: README.md  __init__.py  agent.py  exceptions.py  message.py  payment_constants.py  types.py
agentconnect/core/registry/: README.md  __init__.py  capability_discovery.py  identity_verification.py  registration.py  registry_base.py
agentconnect/prompts/: README.md  __init__.py  agent_prompts.py  chain_factory.py  tools.py
agentconnect/prompts/custom_tools/: README.md  collaboration_tools.py  registry.py  task_tools.py
agentconnect/prompts/templates/: prompt_templates.py
agentconnect/providers/: README.md  __init__.py  anthropic_provider.py  base_provider.py  google_provider.py  groq_provider.py  openai_provider.py  provider_factory.py
agentconnect/utils/: README.md  __init__.py  callbacks.py  interaction_control.py  logging_config.py  payment_helper.py  wallet_manager.py
demos/: QUICKSTART.md  requirements.txt  run_demo.py
demos/api/: README.md  chat_server.py  middleware.py
demos/api/models/: agents.py  chat.py
demos/api/routes/: auth.py
demos/ui/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
demos/utils/: api_validation.py  config_manager.py  demo_logger.py  shared.py  task_manager.py  users.json
docs/: DEVELOPER_GUIDELINES.md  README.md  check_docstrings.py  doc_coverage.py  generate_docs.py  generate_docstring_template.py  index.md
docs/source/: code_of_conduct.rst  conf.py  contributing.rst  index.rst  installation.md  quickstart.md
docs/source/_templates/: layout.html
docs/source/api/: agentconnect.agents.ai_agent.rst  agentconnect.agents.human_agent.rst  agentconnect.agents.rst  agentconnect.agents.telegram.bot_manager.rst  agentconnect.agents.telegram.keyboards.rst  agentconnect.agents.telegram.message_processor.rst  agentconnect.agents.telegram.rst  agentconnect.agents.telegram.states.rst  agentconnect.agents.telegram.telegram_agent.rst  agentconnect.agents.telegram.telegram_tools.rst  agentconnect.cli.rst  agentconnect.communication.hub.rst  agentconnect.communication.protocols.agent.rst  agentconnect.communication.protocols.base.rst  agentconnect.communication.protocols.collaboration.rst  agentconnect.communication.protocols.rst  agentconnect.communication.rst  agentconnect.core.agent.rst  agentconnect.core.exceptions.rst  agentconnect.core.message.rst  agentconnect.core.payment_constants.rst  agentconnect.core.registry.capability_discovery.rst  agentconnect.core.registry.identity_verification.rst  agentconnect.core.registry.registration.rst  agentconnect.core.registry.registry_base.rst  agentconnect.core.registry.rst  agentconnect.core.rst  agentconnect.core.types.rst  agentconnect.prompts.agent_prompts.rst  agentconnect.prompts.chain_factory.rst  agentconnect.rst  (+17 more)
examples/: README.md  __init__.py  data_analysis_assistant.py  research_assistant.py  run_example.py
examples/agents/: README.md  basic_agent_usage.py
examples/autonomous_workflow/: run_workflow_demo.py
examples/communication/: README.md  basic_communication.py
examples/multi_agent/: README.md  content_processing_agent.py  data_analysis_agent.py  message_logger.py  multi_agent_system.py  research_agent.py  telegram_agent.py
tests/: README.md  test_human.py  test_human_simple.py  test_react_prompt.py  test_usage.py
(+44 files in other folders)
